Reworked video processing stuff. Corrected email sending. Last commit before splitting this app into multiple apps.